# fuwuqi_perf

./: .gitignore  README.md
gem5-ml-sim/: .pre-commit-config.yaml  RELEASE-NOTES.md  SConstruct  requirements.txt
gem5-ml-sim/.github/workflows/: ci-tests.yaml  compiler-tests.yaml  daily-tests.yaml  docker-build.yaml  weekly-tests.yaml
gem5-ml-sim/build_tools/: cxx_config_cc.py  cxx_config_hh.py  sim_object_param_struct_cc.py  sim_object_param_struct_hh.py
gem5-ml-sim/configs/common/: Options.py
gem5-ml-sim/configs/deprecated/example/: se.py
gem5-ml-sim/configs/example/: apu_se.py
gem5-ml-sim/configs/example/gpufs/: mi300.py  runfs.py
gem5-ml-sim/configs/example/riscv/: fs_linux.py
gem5-ml-sim/ext/testlib/: configuration.py
gem5-ml-sim/src/: Doxyfile  SConscript
gem5-ml-sim/src/arch/arm/: ArmPMU.py  ArmSystem.py  SConscript  isa.cc  mmu.cc  mmu.hh  nativetrace.cc  pagetable.hh  pmu.cc  pmu.hh  process.cc  table_walker.cc  table_walker.hh  tlb.cc
gem5-ml-sim/src/arch/isa_parser/: isa_parser.py
gem5-ml-sim/src/arch/riscv/: SConscript  decoder.cc  (+6 more)
gem5-ml-sim/src/base/: addr_range.hh  statistics.hh  version.cc
gem5-ml-sim/src/cpu/: CPUTracers.py  FuncUnit.py  SConscript  base.cc  base.hh  op_class.hh  thread_context.cc  uop_tracer.cc  uop_tracer.hh
gem5-ml-sim/src/dev/: SConscript  reg_bank.hh
gem5-ml-sim/src/gpu-compute/: GPU.py  compute_unit.cc  gpu_dyn_inst.cc  hsa_queue_entry.hh  wavefront.cc  wavefront.hh
gem5-ml-sim/src/python/: SConscript
gem5-ml-sim/src/sim/: System.py  insttracer.hh  process.hh  serialize.hh  serialize.test.cc  sim_exit.hh  syscall_emul.cc  syscall_emul.hh
gem5-ml-sim/util/dockerfiles/: docker-bake.hcl
gem5-ml-sim/util/gem5-resources-manager/: requirements.txt
gem5-ml-sim/util/hypercall_external_signal/: orchestrator-request.py  transmitter.py
llmulator_1010/: .base_model_path  .gitignore  CODE_ORGANIZATION.md  MISSING.md  PAPER_NOTES.md  README.md  environment.yml  整理说明.md  项目代码说明.md
llmulator_1010/data/: README.md
llmulator_1010/docs/REPRODUCTION_GUIDE/: DATA.md  ENV.md  EVALUATION.md  README.md  STATUS.md  TRAINING.md  TROUBLESHOOTING.md
llmulator_1010/runs/: _tmp_eval_sft.txt
llmulator_1010/scripts/: run_dpo.sh  setup_conda.sh  train_all.sh  train_sft.sh
llmulator_1010/src/models/: hardware_predictor.py
llmulator_1010/src/train/: sft_digit_ce.py
perfvec/: 说明文件.md  适配流程说明.md
perfvec/CFG/: cfg.py
perfvec/DP/: norm.py  normalize_mmap.py  seq2mmap.py
perfvec/block_trace/: DEPLOY.md  LLVM_COMMIT.txt
perfvec/block_trace/tracer/: CMakeLists.txt  README.md
perfvec/block_trace/tracer/examples/: graph_gather.c  matmul.c
perfvec/block_trace/tracer/passes/: BasicBlockTracer.cpp  CMakeLists.txt
perfvec/block_trace/tracer/runtime/: CMakeLists.txt  trace_logger.cpp
perfvec/block_trace/tracer/scripts/: build.sh  combine_bbtrace.py  dump_external_bb.py  extract_inst_map.py  extract_pcmap.py  merge_pcmap.py  run_example.sh  sort_uop_trace.py  summarize_trace.py  trace_to_text.py  trace_wrapper.sh
(+182 files in other folders)
